[gd_scene load_steps=3 format=2]

[ext_resource path="res://StartMenu.gd" type="Script" id=1]
[ext_resource path="res://coffee man with drop shadow.png" type="Texture" id=2]

[node name="StartMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 249.0
margin_top = 149.0
margin_right = 390.0
margin_bottom = 211.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 141.0
margin_bottom = 14.0
text = "Coffee Man Adventure"

[node name="StartButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 141.0
margin_bottom = 38.0
text = "Start"

[node name="Quit" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 42.0
margin_right = 141.0
margin_bottom = 62.0
text = "Quit"

[node name="Sprite" type="Sprite" parent="CenterContainer"]
position = Vector2( 480, 167 )
scale = Vector2( 0.234645, 0.231481 )
texture = ExtResource( 2 )

[node name="Sprite2" type="Sprite" parent="CenterContainer"]
position = Vector2( 160, 167 )
scale = Vector2( 0.234645, 0.231481 )
texture = ExtResource( 2 )
flip_h = true
[connection signal="tree_entered" from="." to="." method="_on_StartMenu_tree_entered"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
